[package]
name = "anarcrypt_eco_subsystem"
version = "0.1.0"
authors = ["Justin AnarchSun <AnarCoin.Collective@gmail.com>"]
edition = "2021"

[workspace]
members = [
    "anarcrypt_tokens",
    "anarco_program",
    "contract",
    "public",
    "static",
    "src",
    "target",
      # Add other submodule paths here
    # No need to list the root package, as it's implied
]

[dependencies]
solana-sdk = "2.0.4"
spl-token = "6.0.0"
serde = "1.0.112"
serde_json = "1.0.56"
spl-token-2022 = "4.0.0"
solana-vote-program = "2.0.0"
solana-cli = "2.0.4" 
solana-vote = "2.0.4"
spl-associated-token-account = "4.0.0"
spl-token-metadata-interface = "0.4.0"

[lib]
name = "anarcrypt_eco_subsystem"
path = "src/lib.rs"
